<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/textTransId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AccountNo"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textAcno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/acno"
                android:textColor="#000000"/>

        </TableRow>
        <TableRow>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tdate"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textTransDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/transdate"
                android:textColor="#000000"/>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Transdetails"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/textTransDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:scrollHorizontally="false"
                android:singleLine="false"
                android:text="@string/details"
                android:textColor="#000000" />

        </TableRow>
        <TableRow>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TransType"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/textTransType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/type"
                android:textColor="#000000" />

        </TableRow>


        <TableRow>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TransAmount"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/textTransAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/Amount"
                android:textColor="#000000"/>

        </TableRow>

        <TableRow>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Remarks"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/textTransRemarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/remarks"
                android:textColor="#000000" />

        </TableRow>

    </TableLayout>

</LinearLayout>
 

 