<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="updateAccount"
                android:text="@string/Update" >
            </Button>

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="deleteAccount"
                android:text="@string/Delete" >
            </Button>

            <Button
                android:id="@+id/buttonListTrans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="listAccountTransactions"
                android:text="@string/Transactions" >
            </Button>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountnumber"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editAcno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CustomerNumber"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editCno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            >

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountholder"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editHolders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" >

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bankname"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/editBankName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" >

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branchname"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/editBranchName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" >

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branchaddress"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="textPostalAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IFSC"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editIFSC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" >

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MICR"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editMICR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" >

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentbalance"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/editBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" >

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remarks"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editRemarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" >

        </EditText>
    </LinearLayout>

</ScrollView>