<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textTitle"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recenttransactions" >
    </TextView>

    <TableLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Date"
                android:textColor="#ff0000"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Details"
                android:textColor="#ff0000"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/type"
                android:textColor="#ff0000"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Amount"
                android:textColor="#ff0000"
                android:textStyle="bold" >
            </TextView>
        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/listTransactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textError"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sorry"
        android:visibility="invisible" />

</LinearLayout>