<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountnumber"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/spinnerAccounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/accountsprompt" >
            </Spinner>
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Type"
                android:textColor="#000000" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioDeposit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/deposit"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/radioWithdraw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw"
                    android:textColor="#000000"  />
            </RadioGroup>
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="#000000" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/textTransDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sysdate"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/buttonDateDialog"
                    android:layout_marginLeft="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/sysdate"
                    android:onClick="showDateDialog" >
                </Button>
            </LinearLayout>
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTransAmount"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal" >

            </EditText>
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChequeNo"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editChequeNo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number" >
            </EditText>
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chequeparty"
                android:textColor="#000000" />


            <EditText
                android:id="@+id/editChequeParty"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" >

            </EditText>
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chequedetails"
                android:textColor="#000000"  />


            <EditText
                android:id="@+id/editChequeDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" >

            </EditText>
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Remarks"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editRemarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" >

            </EditText>
        </TableRow>

        <TableRow >

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:onClick="addTransaction"
                android:text="@string/addtransaction"
                android:background="#000000"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="35dp"
                android:textColor="#FFFFFF"
                android:textSize="15sp" >
            </Button>
        </TableRow>
    </TableLayout>


</LinearLayout>