<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountnumber"
                android:textColor="#000000"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/editAcno"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="number">
                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CustomerNumber"
                android:textColor="#000000"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/editCno"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="number" >
            </EditText>

        </TableRow>


        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountholder"
                android:textColor="#000000"
                android:layout_marginRight="10dp" />

            <EditText
                android:id="@+id/editHolders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                >
            </EditText>

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bankname"
                android:textColor="#000000"
                android:layout_marginRight="10dp" />

            <EditText
                android:id="@+id/editBankName"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" >
            </EditText>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branchname"
                android:textColor="#000000"  />

            <EditText
                android:id="@+id/editBranchName"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" >
            </EditText>
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branchaddress"
                android:textColor="#000000"  />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IFSC"
                android:textColor="#000000"  />

            <EditText
                android:id="@+id/editIFSC"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="number" >
            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MICR"
                android:textColor="#000000"  />

            <EditText
                android:id="@+id/editMICR"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="number" >
            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentbalance"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editBalance"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" >
            </EditText>
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remarks"
                android:textColor="#000000"  />

            <EditText
                android:id="@+id/editRemarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="">
            </EditText>
        </TableRow>
        <TableRow>

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addAccount"
                android:text="@string/AddAccount"

                android:background="#000000"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="35dp"
                android:textColor="#FFFFFF"
                android:textSize="15sp">

            </Button>

        </TableRow>
    </TableLayout>

</ScrollView>