<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <ListView
            android:id="@+id/listAccounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
        </ListView>

        <TextView

            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tap"
            android:textColor="#FFFFFF"
            android:background="#000000"

            android:textSize="15sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:contentDescription="@string/tap"

                />
            <Button
                android:id="@+id/btnAddLogin"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:text="@string/AddLogin"
                android:onClick="addLogin"
                android:layout_marginTop="15dp"
                android:background="#000000"
                android:textColor="#FFFFFF"
                android:textSize="15sp"


                />
            <Button
                android:id="@+id/btnAddAccount"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:text="@string/AddAccount"
                android:onClick="addAccount"
                android:layout_marginTop="15dp"
                android:background="#000000"
                android:textColor="#FFFFFF"
                android:textSize="15sp"


                />

            <Button
                android:id="@+id/btnAddTransaction"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:text="@string/addtransaction"
                android:onClick="addTransaction"
                android:background="#000000"
                android:layout_marginTop="15dp"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                />

            <Button
                android:id="@+id/btnRecentTransactions"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:text="@string/recenttransactions"
                android:onClick="recentTransactions"
                android:background="#000000"
                android:layout_marginTop="15dp"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                />
            <Button
                android:id="@+id/showLoanPayments"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:text="@string/showLoanPayments"
                android:onClick="showLoanPayments"
                android:background="#000000"
                android:layout_marginTop="15dp"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                />
            <Button
                android:id="@+id/notification"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:text="@string/notification"
                android:onClick="notification"
                android:background="#000000"
                android:layout_marginTop="15dp"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                />
            <Button
                android:id="@+id/feedback"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:text="@string/feedback"
                android:onClick="feedback"
                android:background="#000000"
                android:layout_marginTop="15dp"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                />


            <Button
                android:id="@+id/sendmail"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:text="@string/sendmail"
                android:onClick="sendmail"
                android:background="#000000"
                android:layout_marginTop="15dp"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                />


        </LinearLayout>

    </LinearLayout>
</ScrollView>
